fix around stuff

--- a/browser/css/login.css
+++ b/browser/css/login.css
@@ -1,68 +1,96 @@
-body {
-  font-family: sans-serif;
-  color: #666;
-}
-
-a {
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-form {
-  display: block;
-  margin: 0 auto;
-  margin-top: 10%;
-  text-align: center;
-}
-
-.heading {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: 200;
-  font-size: 60px;
-  margin-top: 0px;
-  color: #aaa;
-}
-
-img {
-  opacity: 0.5;
-}
-
-.faint-text {
-  font-style: italic;
-  font-size: 14px;
-  opacity: 0.6;
-}
-
-input, input:focus {
-  display: block;
-  font-size: 14px;
-  padding: 20px;
-  width: 300px;
-  margin: 30px auto;
-  border: none;
-  border-bottom: 1px #ddd solid;
-  outline: none;
-}
-
-input:focus {
-  border-bottom: 1px rgb(22, 139, 249) solid;
-}
-
-button {
-  background: rgb(22, 139, 249);
-  color: white;
-  border: none;
-  outline: none;
-  padding: 20px;
+.pageCard {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.20);
+  background-color: #FAFAFA;
   border-radius: 3px;
-  font-size: 15px;
-  min-width: 300px;
+  max-width: 25rem;
 }
 
-button.wait {
-  background: rgb(52, 169, 249);
+html {
+  background-image: linear-gradient(to top right, #A82A71, #4C61B0);
+  background-repeat: no-repeat;
+  min-height: 100%;
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+body {
+  background-color: transparent;
+  margin: 0 auto;
+}
+
+.cardBox {
+  align-self: center;
+}
+
+.loginInputs {
+  flex-direction: column;
+}
+
+.loginInputs .form-control {
+  width: 100%;
+}
+
+.loginInputs .form-control:first-child {
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: .25rem;
+}
+
+.loginInputs .form-control:last-child {
+  border-bottom-left-radius: .25rem;
+  border-top-right-radius: 0;
+  margin-left: 0;
+  margin-top: -2px;
+}
+
+.disclaimer p:last-child {
+  margin-bottom: 0;
+}
+
+.disclaimer {
+  font-size: 0.85rem;
+}
+
+.disclaimer p {
+  color: #b3b8bc;
+}
+
+@keyframes buttonLogin {
+  0% {
+      background-position: 0%;
+  }
+  100% {
+      background-position: 200%;
+  }
+}
+
+.loginButton {
+  background-image: linear-gradient(to right, #da2b8e, #3e5abb, #da2b8e);
+  background-size: 200%;
+  background-repeat: repeat;
+  background-position: 0%;
+  border: 0;
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.loginButton.loggingIn {
+  box-shadow: none;
+  animation: buttonLogin 1000ms linear infinite;
+  animation-direction: normal;
+}
+
+.loginButton:active {
+  background-image: linear-gradient(to right, #a72a71, #343d60, #a72a71) !important;
+  background-color: transparent !important;
+  border: none;
+}
+
+.loginButton:focus {
+  box-shadow: none !important;
 }
 
 .errorMessage {
-  color: #f75656;
+  color: #dc3545;
 }
