--- a/browser/views/_layout.pug
+++ b/browser/views/_layout.pug
@@ -1,8 +1,8 @@
 block titleDeterminer
   if pageTitle
-    - var title = 'IGDM - ' + pageTitle
+    - var title = 'IG:dm - ' + pageTitle
   else
-    - var title = 'IGDM - Instagram Desktop Messenger'
+    - var title = 'IG:dm - Instagram Desktop Messenger'
   unless pageID
     - var pageID = ''
 doctype html
