--- a/browser/views/_layout.pug
+++ b/browser/views/_layout.pug
@@ -14,7 +14,7 @@ html(lang='en')
       meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
       meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
 
-      link(rel='stylesheet', type='text/css', href='css/bootstrap.min.css')
+      link(rel='stylesheet', type='text/css', href='../node_modules/bootstrap/dist/css/bootstrap.min.css')
   block body
     body
       block content
