--- a/docs/css/blog.css
+++ b/docs/css/blog.css
@@ -1,14 +1,3 @@
-.container {
-    font-family: 'Quicksand', sans-serif;
-}
-
-.blog-post-content {
-    text-align: left;
-    word-wrap: break-word;
-    line-height: 25px;
-    font-size: 18px;
-}
-
-.blog-post-content .smaller-text {
-    font-size: 15px;
+.h3, h3 {
+  font-weight: 600;
 }
