update download links

--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -14,7 +14,15 @@ prepend header
 block content
   section.changelog
     :markdown-it
-      ## Newest v2.3.0 Features
+      ## Newest v2.4.0 Features
+      - New fresh UI look
+      - Use HTML 5 notifications
+      - Fix for chat not updating after a long while (by fixing electron timeout)
+      - Warn about no 2fa support
+      
+      [View full list](https://github.com/ifedapoolarewaju/igdm/blob/master/CHANGELOG.md#240--2018-03-25) 
+
+      ## v2.3.0 Features
       - You can now upload photos in the DM.
       - Fix unneeded new thread creation when DMing a group.
       - Close modal view on esc button.
