fix changelog nav bar

--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -8,8 +8,8 @@ append head
   link(rel='stylesheet', href='/css/markdown.css')
 
 prepend header
-  - var navtype = 'transparent navbar-dark'
-  - var promo = 'active'
+  - var navtype = 'navbar-dark'
+  - var promo = 'still'
 
 block content
   section.changelog
