add paypal donation option to site

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -58,8 +58,9 @@ block content
     | IG:dm
     | is an open source project that can be used for free by anyone, donations
     | and incentives are wholeheartedly welcome.
-    br
-    | The following is a Bitcoin address where donations can be sent.
+    p
+      a.btn.btn-link.btn-outline-light(role="button" href='http://paypal.me/SolomonOmojola' target="_blank") Donate via PayPal
+    | You can also donate via BITCOIN to the following Bitcoin address.
     .donations
       code 3NM9EubVwdvNm9qiTgLC8DHsRtTHvoyaD6
 
