update website with announcement

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -10,6 +10,12 @@ prepend header
   - var navtype = 'transparent navbar-dark'
   - var promo = 'active'
 
+  .psa
+    b Sponsored: &nbsp;
+    span Looking to buy real likes? Visit &nbsp;
+    a(href="https://gramblast.com/buy-likes-on-instagram" target="_blank")
+     b Gramblast.com
+
 append navigation
   .container.promo.pb-5.pt-2.mb-5.text-center
     h1.text-center.display-1.col-md-auto IG:dm
