--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,3 +1,12 @@
+div.psa {
+    width: 100%;
+    height: 30px;
+    background: white;
+    text-align: center;
+    padding: 5px 5px;
+    font-size: 12px;
+}
+
 .promoBanner.active {
     position: relative;
     color: #FFF;
