Correct the external url for AppImage website

--- a/docs-src/blog/igdm-on-windows-linux.pug
+++ b/docs-src/blog/igdm-on-windows-linux.pug
@@ -40,7 +40,7 @@ block blogContent
     ### How to run it on Linux
     
     As of [version 2.3.1](https://github.com/ifedapoolarewaju/igdm/releases/download/v2.3.1/IGdm-2.3.1-x86_64.AppImage),
-    the Linux version of IG:dm comes as an [AppImage](http://https://appimage.org/) which is a format for packaging applications
+    the Linux version of IG:dm comes as an [AppImage](https://appimage.org/) which is a format for packaging applications
     in a way that allows them to run on common Linux-based operating systems, such as RHEL, CentOS, Ubuntu, Fedora, Debian, and derivatives.
     
     However, in some cases, you might get the following error when you try to run it on a Linux machine:
