--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -14,7 +14,13 @@ prepend header
 block content
   section.changelog
     :markdown-it
-      ## Newest v2.4.0 Features
+      ## Newest v2.5.0 Features
+      - Mute Notifications
+      - Load all previous chat messages
+
+      [View full list](https://github.com/ifedapoolarewaju/igdm/blob/master/CHANGELOG.md#251--2018-06-11)
+
+      ## v2.4.0 Features
       - New fresh UI look
       - Use HTML 5 notifications
       - Fix for chat not updating after a long while (by fixing electron timeout)
