--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -71,6 +71,7 @@ html(lang='en')
                 +link('/blog', 'Blog')
                 +link('https://github.com/ifedapoolarewaju/igdm', 'GitHub')(target='_blank')
                 +link('https://www.producthunt.com/posts/igdm', 'ProductHunt')(target='_blank')
+                +link('https://vvslikes.com/', 'Buy Likes & Views')(target='_blank')
     .container
       block content
     block footer
