add link to igdm pro

--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -72,6 +72,7 @@ html(lang='en')
                 +link('https://github.com/ifedapoolarewaju/igdm', 'GitHub')(target='_blank')
                 +link('https://www.producthunt.com/posts/igdm', 'ProductHunt')(target='_blank')
                 +link('https://vvslikes.com/', 'Buy Likes & Views')(target='_blank')
+                +link('https://pro.igdm.me', 'Try IGdm Pro')(target='_blank')
     .container
       block content
     block footer
