--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -70,6 +70,12 @@ block content
     .donations
       code 3NM9EubVwdvNm9qiTgLC8DHsRtTHvoyaD6
 
+  section.issues.mt-5.text-center
+    h2 Want more features?
+    span
+      | Try &nbsp;
+      a(href='https://pro.igdm.me', target='_blank') IGdm Pro
+
 append footer
   script.
     document.querySelectorAll('.download a').forEach(function (el){
