update website with new version

--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -14,7 +14,14 @@ prepend header
 block content
   section.changelog
     :markdown-it
-      ## Newest v2.5.0 Features
+      ## Newest v2.6.0 Features
+      - Fix notification on windows
+      - Friendly image upload UX
+      - Chat message performance improvement
+
+      [View full list](https://github.com/ifedapoolarewaju/igdm/blob/master/CHANGELOG.md#260--2018-12-22)
+
+      ## v2.5.0 Features
       - Mute Notifications
       - Load all previous chat messages
 
