refactor website layout

--- a/docs-src/blog/_blog.pug
+++ b/docs-src/blog/_blog.pug
@@ -1,12 +1,17 @@
 extends ../_layout
 
-append head
-  link(rel='stylesheet', href='/css/blog.css')
-
 prepend header
   - var navtype = 'navbar-dark'
   - var promo = 'still'
 
+append head
+  link(rel='stylesheet', href='/css/blog.css')
+  script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+  script.
+    (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6350923924096600",
+    enable_page_level_ads: true
+    });
 block content
   .mt-5.col-md-8
     block blogContent
