--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -16,6 +16,9 @@ prepend header
     a(href="https://gramblast.com/buy-likes-on-instagram" target="_blank")
      b Gramblast.com
 
+block adLink
+  +link('https://vvslikes.com/', 'Buy Likes & Views')(target='_blank')
+
 append navigation
   .container.promo.pb-5.pt-2.mb-5.text-center
     h1.text-center.display-1.col-md-auto IG:dm
