--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -38,12 +38,6 @@ html(lang='en')
       link(rel='stylesheet',          href='https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css')
       link(rel='stylesheet',          href='https://fonts.googleapis.com/css?family=Muli:400,700,900')
       link(rel='stylesheet',          href='/css/global.css')
-      script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-      script.
-        (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-6350923924096600",
-        enable_page_level_ads: true
-        });
   body
     block header
       a.forkus(href='https://github.com/ifedapoolarewaju/igdm', target='_blank')
@@ -71,7 +65,7 @@ html(lang='en')
                 +link('/blog', 'Blog')
                 +link('https://github.com/ifedapoolarewaju/igdm', 'GitHub')(target='_blank')
                 +link('https://www.producthunt.com/posts/igdm', 'ProductHunt')(target='_blank')
-                +link('https://vvslikes.com/', 'Buy Likes & Views')(target='_blank')
+                block adLink
                 +link('https://pro.igdm.me', 'Try IGdm Pro')(target='_blank')
     .container
       block content
