website: remove ad

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -11,10 +11,10 @@ prepend header
   - var promo = 'active'
 
   .psa
-    b Sponsored: &nbsp;
-    span Looking to buy real likes? Visit &nbsp;
-    a(href="https://gramblast.com/buy-likes-on-instagram" target="_blank")
-     b Gramblast.com
+    b Advertise Here: &nbsp;
+    span Want to advertise your website? &nbsp;
+    a(href="mailto:ifedapoolarewaju@gmail.com")
+     b Contact us
 
 append navigation
   .container.promo.pb-5.pt-2.mb-5.text-center
