--- a/browser/views/login.pug
+++ b/browser/views/login.pug
@@ -19,5 +19,5 @@ block content
         p
           | This app is not affiliated with Instagram. You can visit the open source project 
           a(href="#") here.
-        p We never store your password.
+        p We don't store your password.
   script(type='text/javascript', src='js/login.js')
